--- a/src/app/layout/bs-element/bs-element.component.html
+++ b/src/app/layout/bs-element/bs-element.component.html
@@ -28,7 +28,7 @@
             <div class="form-group">
                 <label class="col-md-4 control-label" for="textinput">Apellido:</label>
                 <div class="col-md-5">
-                    <input (input)="inputValidator($event)" [(ngModel)]="coordinatorData.person.lastname" id="textinput" name="textinput" type="text"
+                    <input (input)="inputValidator($event)" [(ngModel)]="coordinatorData.person.last_name" id="textinput" name="textinput" type="text"
                         placeholder="Introducir el apellido" class="form-control input-md" required="true">
 
                 </div>
