--- a/src/app/layout/tables/tables.component.html
+++ b/src/app/layout/tables/tables.component.html
@@ -45,7 +45,7 @@
                             <tr *ngFor="let student of students; let i=index;">
                                 <th scope="row">{{i+1}}</th>
                                 <td>{{student.name}}</td>
-                                <td>{{student.lastname}}</td>
+                                <td>{{student.last_name}}</td>
                                 <td>{{student.cellphone}}</td>
                             </tr>
 
